<resources>
    <string name="app_name">Calculator</string>
    <string name="text_uno_button">1</string>
    <string name="text_dos_button">2</string>
    <string name="text_tres_button">3</string>
    <string name="text_cuatro_button">4</string>
    <string name="text_cinco_button">5</string>
    <string name="text_seis_button">6</string>
    <string name="text_siete_button">7</string>
    <string name="text_ocho_button">8</string>
    <string name="text_nueve_button">9</string>
    <string name="text_cero_button">0</string>
    <string name="text_punto_button">.</string>
    <string name="text_igual_button">=</string>
    <string name="text_ac_button">AC</string>
    <string name="text_mas_menos_button">+/-</string>
    <string name="text_porc_button">%</string>
    <string name="text_div_button">/</string>
    <string name="text_mult_button">*</string>
    <string name="text_mas_button">+</string>
    <string name="text_menos_button">-</string>
    <string name="text_ops">HERE OPS</string>
    <string name="text_resutl">HERE RESULT</string>
</resources>